@@ -8,6 +8,7 @@ static char *music_site_list[] =
 	"BestRadio 台北好事989", "212",
 	"BestRadio 花蓮好事935", "303",
 	"BestRadio 高雄港都983", "213",
+	"FM S.H.E 我的電台", "369",
 	"Flyradio 飛揚調頻895", "357",
 	"HitFm 聯播網 台中91.5", "88",
 	"HitFm 聯播網 高雄90.1", "90",
@@ -44,13 +45,11 @@ static char *life_site_list[] =
 	"台中廣播", "230",
 	"台北廣播電台- 都會資訊頻道", "208",
 	"台北廣播電台喔海洋頻道", "238",
-	"台視數位廣播", "319",
 	"大千電台", "109",
 	"大愛網路電台", "325",
 	"宜蘭中山電台", "301",
 	"環宇廣播", "282",
 	"真心之音廣播電台", "217",
-	"蒲公英聖樂網", "337",
 	"警廣長青網", "271",
 	"青春線上", "356",
 	"飛碟電台", "232",
@@ -67,6 +66,7 @@ static char *news_site_list[] =
 static char *others_site_list[] =
 {
 	"台灣之音-華語", "315",
+	"嘉義之音", "368",
 	"復興廣播電台 短波網", "288",
 	"復興廣播電台 第一網", "286",
 	"復興廣播電台 第二網", "287",
@@ -115,21 +115,23 @@ static char *traffic_site_list[] =
 
 static char *live_site_list[] =
 {
-	"世棒2台", "603",
-	"世界盃棒球直播", "996",
-	"KuLife", "997",
+	"民視直播新聞", "600",
+	"中視整點新聞", "36",
+	"KuSport", "996",
 	"KuMovie", "998",
 	"KuDrama", "999",
-	"Bloomberg Television", "1001",
-	//"中視", "36",
-	"中天新聞台", "37",
+	"KuLife", "997",
 	"大愛電視台", "38",
-	"華視影音頻道", "50",
-	"生命電視台", "54",
 	"大愛電視二台", "57",
-	//"台灣樂起來(樂透開獎)", "58",
-	//"NOKIA音樂讓我說演唱會", "604",
+	"LPGA高爾夫直播", "602",
+	"華視IQ教育文化頻道", "16",
+	"華視影音頻道", "50",
+	"華視EQ休閒頻道", "18",
+	"Bloomberg Television", "1001",
 	"流行追蹤", "21",
+	"台灣樂起來(樂透開獎)", "58",
+	"世棒2台", "603",
+	"生命電視台", "54",
 	NULL
 };
 #endif /* __SITE_LIST_H__ */
