@@ -1,4 +1,8 @@
-2008-09-01  Stanley Lee <stanley@katdc.com>
+2008-10-20  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* src/sitelist.h: update the source url.
+
+2008-09-01  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* src/channel.c: update the source url.
 
